--- a/src/company/appsco-company-components-page.html
+++ b/src/company/appsco-company-components-page.html
@@ -115,14 +115,15 @@
                 </div>
             </paper-card>
 
-            <paper-card heading="Branding"
-                        class="appsco-company-brand-details">
-                <div class="card-content">
-                    <appsco-company-brand-details company="[[ company ]]"></appsco-company-brand-details>
+            <paper-card heading="Transfer Token"
+                        class="transfer-token">
+                <div class="card-content card-content-no-padding">
+                    <p class="message">
+                        Generate transfer token in order to enable the partner to add your company as a customer.
+                    </p>
                 </div>
-
                 <div class="card-actions">
-                    <paper-button on-tap="_onManageCompanyBrandSettings">Manage</paper-button>
+                    <paper-button on-tap="_onManageTransferToken">Manage</paper-button>
                 </div>
             </paper-card>
         </div>
@@ -144,20 +145,6 @@
                 </div>
             </paper-card>
 
-            <paper-card heading="Transfer Token"
-                        class="transfer-token">
-                <div class="card-content card-content-no-padding">
-                    <p class="message">
-                        Generate transfer token in order to enable the partner to add your company as a customer.
-                    </p>
-                </div>
-                <div class="card-actions">
-                    <paper-button on-tap="_onManageTransferToken">Manage</paper-button>
-                </div>
-            </paper-card>
-        </div>
-
-        <div class="idp-settings">
             <paper-card heading="IdP Settings">
                 <div class="card-content">
                     <p class="message">
@@ -171,6 +158,32 @@
 
                 <div class="card-actions">
                     <paper-button on-tap="_onManageCompanyIdPSettings">Manage</paper-button>
+                </div>
+            </paper-card>
+        </div>
+
+        <div class="idp-settings">
+
+            <paper-card heading="Branding"
+                        class="appsco-company-brand-details">
+                <div class="card-content">
+                    <appsco-company-brand-details company="[[ company ]]"></appsco-company-brand-details>
+                </div>
+
+                <div class="card-actions">
+                    <paper-button on-tap="_onManageCompanyBrandSettings">Manage</paper-button>
+                </div>
+            </paper-card>
+
+            <paper-card heading="Branded Login" >
+                <div class="card-content">
+                    <p class="message">
+                        Customize login form for your company and add your own branding.
+                    </p>
+                </div>
+
+                <div class="card-actions">
+                    <paper-button on-tap="_onManageCompanyBrandedLogin">Manage</paper-button>
                 </div>
             </paper-card>
         </div>
@@ -331,6 +344,11 @@
             _onManageCompanyBrandSettings: function(event) {
                 this._setSharedElement(event.target);
                 this.fire('manage-company-brand-settings');
+            },
+
+            _onManageCompanyBrandedLogin: function(event) {
+                this._setSharedElement(event.target);
+                this.fire('manage-company-branded-login');
             },
 
             _onManageCompanyDomains: function(event) {
