DASH-3374 merge devices of the same browser and operating system into one

--- a/src/directory/appsco-account-devices-page.html
+++ b/src/directory/appsco-account-devices-page.html
@@ -33,7 +33,7 @@
             }
         </style>
 
-        <paper-card heading="Devices" id="card">
+        <paper-card heading="Devices activity" id="card">
             <paper-icon-button
                     icon="close"
                     title="Close"
