--- a/src/directory/appsco-manage-account-components-page.html
+++ b/src/directory/appsco-manage-account-components-page.html
@@ -354,7 +354,7 @@
             </paper-card>
 
 
-            <paper-card heading="Devices" class="appsco-account-device">
+            <paper-card heading="Devices activity" class="appsco-account-device">
 
                 <template is="dom-if" if="[[ _managedUser ]]">
                     <div class="card-content">
