--- a/src/appsco-company-page.html
+++ b/src/appsco-company-page.html
@@ -160,6 +160,7 @@
                                 name="appsco-company-branded-login-page"
                                 company="[[ company ]]"
                                 authorization-token="[[ authorizationToken ]]"
+                                on-company-branded-login-changed="_showCompanyComponentsPage"
                                 on-back="_onResourceBack">
                         </appsco-company-branded-login-page>
 
