DASH-3392 [BACKEND][Policy] Disapprove personal dashboard

--- a/src/auditlog/appsco-audit-log.html
+++ b/src/auditlog/appsco-audit-log.html
@@ -1008,6 +1008,10 @@
                         event = this.localize('oauth_application_removed', 'application', item.data.oauth_application.title);
                         break;
 
+                    case 'company_policy_breached':
+                        event = this.localize('company_policy_breached');
+                        break;
+
                     default:
                 }
 
